# ImRec

./: ImRec.cabal  README.md  main.py  stack.yaml
src/: Bresenham.hs  Cells.hs  Circle.hs  Dots.hs  Experimental.hs  Hough.hs  HoughRosetta.hs  Lines.hs  Main.hs  Square.hs  Utils.hs
temp/: a.out  test.c
