name:                ImRec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ImRec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ImRec
  hs-source-dirs:       src
  other-modules:        Bresenham
                      , Utils
                      , Circle
                      , Square
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , JuicyPixels
                      , array
                      , random
                      , repa
                      , JuicyPixels-repa
                      , array
                      , parallel
                      , vector
